--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica Flex</title>
+    <title>Menú</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
-    
+    <div class="menu">
+        <div class="menu-item">
+            <span>INICIO</span>
+            <a href="#">ENTRAR</a>
+        </div>
+        <div class="menu-item">
+            <span>SERVICIOS</span>
+            <a href="#">ENTRAR</a>
+        </div>
+        <div class="menu-item">
+            <span>ABOUT</span>
+            <a href="#">ENTRAR</a>
+        </div>
+        <div class="menu-item">
+            <span>CONTACTO</span>
+            <a href="#">ENTRAR</a>
+        </div>
+    </div>
 </body>
 </html>
