refactor: :zap: Se corrigio un error

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
         <div class="language-containers">
             <div class="language-container1">
-                <div class="language1">ES</div> 
+                <div class="language1">EN</div> 
             </div>
             &nbsp;&nbsp;&nbsp;
             <div class="language-container2">
