feat: :sparkles: Se crea todo el codigo HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
-    
+    <div class="centrar">
+        <h1>I'm Centered!</h1> 
+        <p>
+            This box is both vertically and horizontalley
+            centered. Event if the text in the box changes to
+            make it wider or taller, the box will still be
+            centered. Go ahead, give it a try. Just click to edit
+            the text.
+        </p>
+    </div>
 </body>
 </html>
