feat: :construction: Se hizo parte del codigo HTML, aun falta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+    </div>
+    <div class="container">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        </div>
 </body>
 </html>
