--- a/index.html
+++ b/index.html
@@ -3,30 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica Flex</title>
+    <title>Galería de Imágenes</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
     <div class="container">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-    </div>
-    <div class="container">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
-        <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+        <div class="gallery1">
+            <div class="subgallery">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+            </div>
         </div>
+        <div class="gallery2">
+            <div class="subgallery">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+                <img src="https://via.placeholder.com/400x400.png?text=Aprende+Flexbox" alt="img">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
