feat: :sparkles: Se creo todo el codigo HTML

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica Flex</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
-    
+    <header>
+        <div class="header"><strong>Bienvenido al Header</strong></div>
+    </header>
+    <main>
+        <nav><p>Navegacion</p></nav>
+        <article>
+            <div class="titulo"><strong>Titulo del post</strong></div>
+            <div class="parrafo"><p>Lorem ipsum...</p></div>
+        </article>
+        <aside><p>Columna</p></aside>
+    </main>
+    <footer>
+        <div class="footer"><p>Footer</p>
+        </div>
+    </footer>
 </body>
 </html>
