--- a/index.html
+++ b/index.html
@@ -5,9 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica Flex</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module" defer></script>
 </head>
 <body>
-    
+    <div class="pricing-box">
+        <div class="pricing-plan">
+            <div class="pricing-header">1 day pass</div>
+            <div class="pricing-content">
+                <p>Acceso en dia selecionado</p>
+                <p>Participacion en workshops</p>
+                <p>Acceso a zona networking</p>
+            </div>
+            <div class="pricing-footer"><div class="cuadro-footer">Comprar</div></div>
+        </div>
+        <div class="pricing-plan">
+            <div class="pricing-header">Weekend Pass</div>
+            <div class="pricing-content">
+                <p>Acceso en fin de semana</p>
+                <p>Participacion en workshops</p>
+                <p>Acceso a zona networking</p>
+                <p>Noche de hotel incluida</p>
+            </div>
+            <div class="pricing-footer"><div class="cuadro-footer">Comprar</div></div>
+        </div>
+        <div class="pricing-plan">
+            <div class="pricing-header">Weekend Pass</div>
+            <div class="pricing-content">
+                <p>Acceso a todas las ponencias</p>
+                <p>Participacion en workshops</p>
+                <p>Acceso a zona networking</p>
+                <p>Noche de hotel incluida</p>
+                <p>Lunch de bienvenida</p>
+            </div>
+            <div class="pricing-footer"><div class="cuadro-footer">Comprar</div></div>
+        </div>
+    </div>
 </body>
 </html>
