feat: :white_check_mark: Se crea y termina todo el codigo HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,63 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" type="module" defer></script>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Mi pagina Flexbox</h1>
+        <p>Bienvenidos a la página Flexbox</p>
+    </header>
+    <nav>
+        <ul class="navigation">
+            <div>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Quienes Somos</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacto</a></li>
+            </div>
+            <div>
+                <li><a href="#">English</a></li>
+                <li><a href="#">Euskera</a></li>
+            </div>
+        </ul>
+    </nav>
+    <div class="centro">
+        <div>
+            <aside>
+                <h2>El señor Aside</h2>
+                <img class="img400" src="storage/img/img400x400.png" alt="400*400">
+                <p> relleno relleno relleno </p>
+                <P> relleno relleno relleno </P>
+                <P> relleno relleno relleno </P>
+                <P> relleno relleno relleno </P>
+                <img class="img200" src="storage/img/img400x200.png" alt="400*200">
+                <img class="img200" src="storage/img/img400x200.png" alt="400*200">
+                <img class="img200" src="storage/img/img400x200.png" alt="400*200">
+            </aside>
+        </div>
+        <div>
+            <main>
+                <div>
+                    <h2>Titulo del articulo del dia</h2>
+                    <p>El día que aprendí Flexbox, 26-02-2024</p>
+                    <img class="img668" src="storage/img/img668x200.png" alt="668*200">
+                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
+                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
+                </div>
+                <div>
+                    <h2>Titulo del articulo del dia</h2>
+                    <p>El día que aprendí Flexbox, 26-02-2024</p>
+                    <img class="img668" src="storage/img/img668x200.png" alt="668*200">
+                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
+                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
+                </div>
+            </main>
+        </div>
+    </div>
+    <footer>
+        <h1>Footer</h1>
+    </footer>
 </body>
+
 </html>
