--- a/index.html
+++ b/index.html
@@ -4,67 +4,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica Flex</title>
+    <title>Practica FlexBox</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module" defer></script>
 </head>
 
 <body>
-    <header>
-        <h1>Mi pagina Flexbox</h1>
-        <p>Bienvenidos a la página Flexbox</p>
-    </header>
-    <nav>
-        <ul class="navigation">
-            <div>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Quienes Somos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacto</a></li>
+    <div class="container">
+        <div class="main-container">
+            <div class="sub-container">
+                <div class="box">
+                    <h1>Título</h1>
+                </div>
+                <div class="box">
+                    <h2>Dashboard</h2>
+                </div>
+                <div class="box">
+                    <p>Parrafo</p>
+                </div>
+                <div class="box">
+                    <div class="items-container">
+                        <div class="box">
+                            <p>Item 1</p>
+                        </div>
+                        <div class="box">
+                            <p>Item 2</p>
+                        </div>
+                        <div class="box">
+                            <p>Item 3</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box"></div>
+                <div class="box">
+                    <p>Parrafo</p>
+                </div>
+                <div class="box">
+                    <div class="items-container">
+                        <div class="box">
+                            <p>Item 4
+                            <select>
+                               <option>SubItem</option>
+                               <option>SubItem</option>
+                               <option>SubItem</option>
+                               <option>SubItem</option>
+                            </select>
+                            </p>
+                        </div>
+                        <div class="box">
+                            <p>Item 5
+                            <select>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                             </select>
+                            </p>
+                        </div>
+                        <div class="box">
+                            <p>Item 6
+                            <select>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                             </select>
+                            </p>
+                        </div>
+                        <div class="box">
+                            <p>Item 7
+                            <select>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                                <option>SubItem</option>
+                             </select>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <footer>Footer</footer>
+                </div>
             </div>
-            <div>
-                <li><a href="#">English</a></li>
-                <li><a href="#">Euskera</a></li>
-            </div>
-        </ul>
-    </nav>
-    <div class="centro">
-        <div>
-            <aside>
-                <h2>El señor Aside</h2>
-                <img class="img400" src="storage/img/img400x400.png" alt="400*400">
-                <p> relleno relleno relleno </p>
-                <P> relleno relleno relleno </P>
-                <P> relleno relleno relleno </P>
-                <P> relleno relleno relleno </P>
-                <img class="img200" src="storage/img/img400x200.png" alt="400*200">
-                <img class="img200" src="storage/img/img400x200.png" alt="400*200">
-                <img class="img200" src="storage/img/img400x200.png" alt="400*200">
-            </aside>
         </div>
-        <div>
-            <main>
-                <div>
-                    <h2>Titulo del articulo del dia</h2>
-                    <p>El día que aprendí Flexbox, 26-02-2024</p>
-                    <img class="img668" src="storage/img/img668x200.png" alt="668*200">
-                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
-                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
+        <div class="secondary-container">
+            <div class="sub-container">
+                <div class="box circle-container">
+                    <div class="circle">
+                        <div class="dropdown">
+                            <p>Item 1</p>
+                            <p>Item 2</p>
+                            <p>Item 3</p>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <h2>Titulo del articulo del dia</h2>
-                    <p>El día que aprendí Flexbox, 26-02-2024</p>
-                    <img class="img668" src="storage/img/img668x200.png" alt="668*200">
-                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
-                    <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
+                <div class="box">
+                    <h2>Dashboard</h2>
                 </div>
-            </main>
+                <div class="box">
+                    <h3>Parrafo/Item/SubItem</h3>
+                </div>
+                <div class="grid-container">
+                    <div class="grid-item">1</div>
+                    <div class="grid-item">2</div>
+                    <div class="grid-item">3</div>
+                    <div class="grid-item">4</div>
+                </div>
+                <br>
+                <div class="box big-box">
+                    <p>Titulo</p>
+                    <p>Parrafo</p>
+                    <br>
+                    <div class="small-box">
+                        <p>Contenido</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <footer>
-        <h1>Footer</h1>
-    </footer>
 </body>
-
 </html>
