refactor: :zap: Se corrigio el ancho de la pagina

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                 <div>
                     <h2>Titulo del articulo del dia</h2>
                     <p>El día que aprendí Flexbox, 26-02-2024</p>
-                    <img class="img668" src="storage/img/img668x200.png" alt="668*200">
+                    <img class="img668" src="storage/img/img668x200.png" alt="668*200" style="height: 50%;">
                     <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
                     <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
-                </div>
+                    
                 <div>
                     <h2>Titulo del articulo del dia</h2>
                     <p>El día que aprendí Flexbox, 26-02-2024</p>
-                    <img class="img668" src="storage/img/img668x200.png" alt="668*200">
+                    <img class="img668" src="storage/img/img668x200.png" alt="668*200" style="height: 50%;">
                     <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
                     <p>Atlético Nacional es un equipo de fútbol colombiano con una larga historia y una base de seguidores apasionados. Conocido por su estilo de juego ofensivo y sus habilidades tácticas, el equipo ha logrado numerosos éxitos a lo largo de los años.</p>
                 </div>
