--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box-footer">
                     <footer>Footer</footer>
                 </div>
             </div>
@@ -105,10 +105,38 @@
                     <h3>Parrafo/Item/SubItem</h3>
                 </div>
                 <div class="grid-container">
-                    <div class="grid-item">1</div>
-                    <div class="grid-item">2</div>
-                    <div class="grid-item">3</div>
-                    <div class="grid-item">4</div>
+                    <div class="grid-item">
+                        <div>150</div>
+                        <div>Parrafo</div>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 60%;"></div>
+                          </div>
+                        <div>60%</div>                          
+                    </div>
+                    <div class="grid-item">
+                        <div>150</div>
+                        <div>Parrafo</div>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 30%;"></div>
+                          </div>
+                        <div>30%</div> 
+                    </div>
+                    <div class="grid-item">
+                        <div>150</div>
+                        <div>Parrafo</div>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 40%;"></div>
+                          </div> 
+                        <div>40%</div>
+                    </div>
+                    <div class="grid-item">
+                        <div>150</div>
+                        <div>Parrafo</div>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 80%;"></div>
+                          </div>
+                        <div>80%</div> 
+                    </div>
                 </div>
                 <br>
                 <div class="box big-box">
